--- a/public/assets/SupportWebsite/css/site.css
+++ b/public/assets/SupportWebsite/css/site.css
@@ -28,7 +28,10 @@
 
 .social-networks{
 	padding: 0;
-	margin-left: 90px;
+	margin-left: 88px;
+}
+.social-networks2{
+	padding: 0;
 }
 .social-networks ul{
 	padding: 0;
