--- a/public/assets/SupportWebsite/css/apppage.css
+++ b/public/assets/SupportWebsite/css/apppage.css
@@ -15,8 +15,11 @@ a{
 .btu{
     /*float:right;
     margin-right:10px;*/
-    margin-top:120px;
+    /*margin-top:120px;*/
+    color: white;
+    margin-top: 150px;
 }
+
 .para1,h1{
         font-size:60px;
 }
@@ -54,7 +57,7 @@ h2{
      border: 1px inset;
      padding:10px;
      background-color:#f8b619;
-     width: 100%;
+     width: 130px; height:130px; 
 }
 .group2{
  /*margin-left:170px;*/
@@ -84,8 +87,47 @@ span
 {
   color:black;
 }
-.features ul
+/*.features ul
 {
   list-style: square;
 }
-/**/
+*//**/ 
+
+@media (max-width:992px){ 
+  .img{ 
+    width : 400px; 
+    height:400px; 
+    margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+    } 
+    .logos{ 
+    width:240px; 
+    height:240px ; 
+    margin-left:auto; 
+    margin-right: auto;
+    }
+
+  }
+
+@media (max-width:768px){
+ .img{ 
+  width : 400px; 
+  height:400px; 
+    margin-left: auto;
+  margin-right: auto;
+  }  
+  .logos{ 
+    width:120px; 
+    height:120px ; 
+    margin-left:auto; 
+    margin-right: auto;
+    }
+     .btu{ 
+      margin-left:40px; 
+      margin-top:10px;
+       } /**/
+       .para1 h1 {
+        font-size: 24pt !important;
+       }
+}  
