--- a/public/assets/SupportWebsite/css/site.css
+++ b/public/assets/SupportWebsite/css/site.css
@@ -1,3 +1,4 @@
+body{overflow-x: hidden;width: 100%;}
 .navbar-header{padding-top:10px; padding-right: 10px;}
 .carousel-control{padding-top:140px;height: 99%;}
 .carousel{margin-top: 50px;}
@@ -6,6 +7,9 @@
 .btn-branded{background-color: #f8b619; color:white;}
 .form-control{margin-top: 10px;}
 .social{width: 50px;height: 50px;margin-top: 5px; font-size: 30pt; margin-right: 20px; margin-left: 0px; padding: 0;}
+@media(max-width: 768px){
+	.social{width: 25px;height: 25px;margin-top: 0px; margin-bottom: 15px; padding: 0;}
+}
 .social-container
 {
   padding-left: 20px;
@@ -30,10 +34,7 @@
 	padding: 0;
 	margin-left: 85px;
 }
-.social-networks2{
-	padding: 0;
-        margin-left: -30px;
-}
+
 .social-networks ul{
 	padding: 0;
 }
