--- a/public/assets/SupportWebsite/css/style.css
+++ b/public/assets/SupportWebsite/css/style.css
@@ -64,7 +64,8 @@
       border: 0;
       font-size: 120px;
       margin-top: 0;
-      text-shadow: 0 1px 1px rgba(0,0,0,.4);
+      text-shadow: 2px 2px 2px rgba(0,0,0,.6);
+      background-image: none !important;
     }
 
     .carousel .item {
@@ -948,4 +949,11 @@ border-left: 5px solid #3a3a3c;
   		padding: 0;
   	}
   	.social-networks2 ul li i{font-size: 16pt;}
+}
+
+
+
+#foot
+{
+  margin: 0;
 }
