--- a/public/assets/SupportWebsite/css/style.css
+++ b/public/assets/SupportWebsite/css/style.css
@@ -800,7 +800,7 @@ footer
 #footer
 {
   /*padding: 20px;*/
-  background-color: #f7f7f7;
+  background-color: #eaeaea;
   color: #202020;
 }
 .footer-container
